Formatting and refactoring

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="The experimental website of Elliot Dickerson made in Rust.">
+  <meta name="description" content="The experimental website of Elliot Dickerson made in React.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <main id="root" class="container animate__animated animate__fadeInBottomRight"></main>
+  <main id="root" class="container"></main>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
